added shop page

--- a/shop.html
+++ b/shop.html
@@ -22,8 +22,8 @@
 
       <div>
         <ul id="navbar">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shop.html" class="active">Shop</a></li>
           <li><a href="soon.html">Blog</a></li>
           <li><a href="soon.html">About</a></li>
           <li><a href="soon.html">Contact</a></li>
@@ -42,44 +42,10 @@
     </header>
     <!-- nav end -->
 
-    <!-- hero starts -->
-    <section id="hero">
-      <h4>Tade-in-offer</h4>
-      <h2>Super value deals</h2>
-      <h1>On all products</h1>
-      <p>Save more with coupons & up to 70% off!</p>
-      <button>Shop Now</button>
+    <section id="main" class="section-p1">
+      <h2>#stayhome#staysafe</h2>
+      <h6>Get upto 60% off on and exciting offers</h6>
     </section>
-    <!-- hero ends -->
-
-    <!-- feature starts -->
-    <section id="feature" class="section-p1">
-      <div class="fe-box">
-        <img src="img/features/f1.png" alt="" />
-        <h6>Free Shipping</h6>
-      </div>
-      <div class="fe-box">
-        <img src="img/features/f2.png" alt="" />
-        <h6>Online Order</h6>
-      </div>
-      <div class="fe-box">
-        <img src="img/features/f3.png" alt="" />
-        <h6>Save Money</h6>
-      </div>
-      <div class="fe-box">
-        <img src="img/features/f4.png" alt="" />
-        <h6>Promotions</h6>
-      </div>
-      <div class="fe-box">
-        <img src="img/features/f5.png" alt="" />
-        <h6>Happy Sell</h6>
-      </div>
-      <div class="fe-box">
-        <img src="img/features/f6.png" alt="" />
-        <h6>F24/7 Support</h6>
-      </div>
-    </section>
-    <!-- feature ends -->
 
     <!-- product1 starts -->
     <section id="products1" class="section-p1">
@@ -209,173 +175,6 @@
       </div>
     </section>
     <!-- product1 ends -->
-    <!-- banner starts -->
-    <section id="banner" class="section-m1">
-      <h4>Repair Service</h4>
-      <h2>Up to <span>70% off</span> - All t-shirt & Accessories</h2>
-      <button class="basic">Explore More</button>
-    </section>
-    <!-- banner ends -->
-
-    <!-- newarrival starts -->
-    <section id="products1" class="section-p1">
-      <h2>New Arrivals</h2>
-      <p>Summer Collection New Morden Design</p>
-      <div class="pro-container">
-        <div class="pro">
-          <img src="img/products/n1.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n2.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n3.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n4.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n5.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n6.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n7.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/n8.jpg" alt="" />
-          <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fas fa-shopping-bag cart"></i></a>
-        </div>
-      </div>
-    </section>
-    <!-- newarrival ends -->
-    <!-- sm-banner starts -->
-    <section id="sm-banner" class="section-p1">
-      <div class="banner-box">
-        <h4>crazy deal</h4>
-        <h2>buy 1 get 1 free</h2>
-        <span>Best Classic dress on sale</span>
-        <button class="white">Learn More</button>
-      </div>
-      <div class="banner-box">
-        <h4>Amazing Collection</h4>
-        <h2>buy 1 get 1 free</h2>
-        <span>Upcoming sale</span>
-        <button class="white">Collection</button>
-      </div>
-    </section>
-    <!-- sm-banner ends -->
-
-    <section id="sm-banner2" class="section-p1">
-      <div class="sm-banner-box">
-        <h4>SEASON SALE</h4>
-        <span>All Collection 50% off</span>
-      </div>
-      <div class="sm-banner-box">
-        <h4>Winter SALE</h4>
-        <span>Starts from 999</span>
-      </div>
-      <div class="sm-banner-box">
-        <h4>T-shirt</h4>
-        <span>Trendy Prints</span>
-      </div>
-    </section>
 
     <!-- Newletter starts -->
     <section id="newsletter" class="section-p1 section-m1">
