--- a/soon.html
+++ b/soon.html
@@ -23,7 +23,7 @@
       <div>
         <ul id="navbar">
           <li><a href="index.html">Home</a></li>
-          <li><a href="soon.html">Shop</a></li>
+          <li><a href="shop.html">Shop</a></li>
           <li><a href="soon.html">Blog</a></li>
           <li><a href="soon.html">About</a></li>
           <li><a href="soon.html">Contact</a></li>
